--- a/belajar2.html
+++ b/belajar2.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Halo saya sedang belajar
-        hamam belajar juga yuh
-        mam
-    </p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptatem voluptatibus rerum magni officia pariatur enim quas. Dolorum unde ad vero, ea quisquam perspiciatis dignissimos incidunt est, ratione, provident recusandae.
     
 </body>
 </html>
