--- a/belajar2.html
+++ b/belajar2.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptatem voluptatibus rerum magni officia pariatur enim quas. Dolorum unde ad vero, ea quisquam perspiciatis dignissimos incidunt est, ratione, provident recusandae.
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, iste ea, maxime voluptas officia non odit praesentium illo, eos accusamus aut? Officia ipsam natus illum veritatis repellendus error, laboriosam ex.
 </body>
 </html>
